RESOLVED FIXED220252
[LFC][IFC][Quirk] Let's adopt a less quirky behavior for line breaks on non-empty lines
https://bugs.webkit.org/show_bug.cgi?id=220252
Summary [LFC][IFC][Quirk] Let's adopt a less quirky behavior for line breaks on non-e...
alan
Reported 2021-01-04 12:46:47 PST
<br> in non-standard mode stretches the line box only when the line is empty. e.g. <div><span><br></span></div> will stretch but <div>this will not stretch to 200px<span style="font-size: 200px;"><br></span></div> However it's way too quirky and it does not even match Chrome's behavior.
Attachments
Patch (3.74 KB, patch)
2021-01-04 12:52 PST, alan
no flags
Patch (4.23 KB, patch)
2021-01-10 19:59 PST, alan
no flags
Patch (8.77 KB, patch)
2021-01-11 16:45 PST, alan
no flags
Patch (9.38 KB, patch)
2021-01-12 12:57 PST, alan
no flags
Patch (9.39 KB, patch)
2021-01-12 13:02 PST, alan
no flags
Patch (9.54 KB, patch)
2021-01-12 21:20 PST, alan
no flags
Patch (9.17 KB, patch)
2021-01-13 20:41 PST, alan
no flags
alan
Comment 1 2021-01-04 12:52:51 PST
alan
Comment 2 2021-01-10 19:59:26 PST
Antti Koivisto
Comment 3 2021-01-10 22:27:08 PST
Comment on attachment 417359 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=417359&action=review > Source/WebCore/ChangeLog:17 > + Removing this quirk makes the inlineLevelBoxAffectsLineBox logic simpler since we don't have to check against > + whether the line is considered empty and the result is aligned with Chrome's behavior. Should it be removed from legacy too?
alan
Comment 4 2021-01-11 10:08:20 PST
(In reply to Antti Koivisto from comment #3) > Comment on attachment 417359 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=417359&action=review > > > Source/WebCore/ChangeLog:17 > > + Removing this quirk makes the inlineLevelBoxAffectsLineBox logic simpler since we don't have to check against > > + whether the line is considered empty and the result is aligned with Chrome's behavior. > > Should it be removed from legacy too? Yeah good point.
Radar WebKit Bug Importer
Comment 5 2021-01-11 12:47:12 PST
alan
Comment 6 2021-01-11 16:45:09 PST
alan
Comment 7 2021-01-12 12:57:12 PST
alan
Comment 8 2021-01-12 13:02:43 PST
alan
Comment 9 2021-01-12 21:20:12 PST
alan
Comment 10 2021-01-13 20:41:22 PST
EWS
Comment 11 2021-01-14 06:30:23 PST
Committed r271481: <https://trac.webkit.org/changeset/271481> All reviewed patches have been landed. Closing bug and clearing flags on attachment 417594 [details].
Note You need to log in before you can comment on or make changes to this bug.